setup/jenkins/jenkins.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  serviceName: jenkins
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk11
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: jenkins-home-pvc
              mountPath: /var/jenkins_home
  volumeClaimTemplates:
    - metadata:
        name: jenkins-home-pvc
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "alicloud-disk-available"
        resources:
          requests:
            storage: 50Gi
