setup/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins.spotmaxtech.com
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts:
        - jenkins.spotmaxtech.com
      secretName: spotmaxtech-secret
  rules:
    - host: jenkins.spotmaxtech.com
      http:
        paths:
          - backend:
              service:
                name: jenkins-service
                port:
                  number: 80
            path: /
            pathType: Prefix
